--- a/package.json
+++ b/package.json
@@ -3,31 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev -H localhost",
-  "build": "next build",
-  "start": "next start"
-},
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.71.0",
-    "next-sanity": "^9.8.39",
+    "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "sanity": "^3.71.0",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
-    "@types/hast": "^3.0.4",
-    "@types/node": "^20.17.14",
-    "@types/react": "^18.3.18",
+    "@types/node": "^20",
+    "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/unist": "^3.0.3",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
-    "next": "^15.1.5",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3"
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
