--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "critters": "^0.0.23",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.14",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "css-minimizer-webpack-plugin": "^7.0.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
